tests/format/misc/errors/graphql/__snapshots__/format.test.js.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`type-interfaces.graphql [graphql] format 1`] = `
"Syntax Error: Unexpected "|". (5:21)
  3 | # which will break seperator detection added in #7305
  4 |
> 5 | type A implements A | B {
    |                     ^
  6 |   a: a
  7 | }
  8 |
Cause: Syntax Error: Unexpected "|"."
`;
